# argus

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  plan.md  pyproject.toml  report.json  requirements-pinned.txt  teams_meeting_analysis.py
.github/workflows/: ci.yml
config/: default.yaml  detector_registry.yaml
config/policies/: agent-with-tools.yaml  archive-only.yaml  forensic.yaml  human-view.yaml  rag-ingestion.yaml  vlm-read-only.yaml
config/prompt_rules/: en.yaml  generic.yaml
config/yara/: default.yar
data/artifacts/: index.json
data/reports/: scan-07d446a7dc17.json  scan-391592fdff29.json  scan-41c2fcefe971.json  scan-9d525b6ecc65.json  scan-b2a314cf77ae.json  scan-b4481da20d77.json  scan-c469a79c5db5.json  scan-d09f3c8ebc5a.json  scan-d4f15e71edc8.json  scan-e3fc8007868f.json  scan-f0d883fe3156.json  scan-f80d075841fc.json
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.offline.yml
docker/seccomp/: README.md
docs/: architecture.md  argus-img-operator-guide.docx  detector-development.md  implementation-status.md  limitations.md  offline-deployment.md  plan.md  policy-language.md  threat-model.md
examples/: scan_image.py  scan_with_curl.sh
schemas/: detector-report.schema.json  policy.schema.json  scan-report.schema.json
scripts/: __init__.py  export_json_schema.py  generate_test_images.py  verify_dependencies.py  verify_offline.py
src/argus_img/: __init__.py
src/argus_img/api/: app.py  dependencies.py  errors.py  middleware.py
src/argus_img/artifacts/: cleanup.py  lineage.py  release.py  store.py
src/argus_img/cli/: main.py
src/argus_img/config/: __init__.py  default.yaml  detector_registry.yaml
src/argus_img/core/: budget.py  config.py  detector_registry.py  enums.py  exceptions.py  hashing.py  limits.py  logging.py  models.py  (+2 more)
tests/: conftest.py
tests/integration/: test_phase_4_6.py  test_pipeline.py
tests/security/: test_api_errors.py  test_logging.py  test_phase_4_7b.py  test_phase_4_7c.py  test_release_control.py  test_resource_budget.py  test_security_fixes.py  test_subprocess_runner.py
tests/unit/: test_artifact_store.py  test_config_root.py  test_detector_tuning.py  test_exiftool_metadata.py  test_finalize_atomicity.py  test_intake.py  test_new_features.py  test_phase_4_7.py  test_policy.py  test_prompt_text.py  test_storage_status.py  test_strict_schemas.py
tools/evaluation/: generate_mac_corpus.py  run_api_loopback_tests.py  run_latest_evaluation.py  run_mac_evaluation.py  run_targeted_eval.py
(+94 files in other folders)
