[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-img"
version = "0.1.0"
description = "Offline image-security analysis and content-disarm system"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.111.0,<0.120.0",
  "pydantic==2.5.3",
  "pillow==11.3.0",
  "PyYAML==6.0.3",
  "python-magic==0.4.27",
  "python-multipart>=0.0.12",
  "pyzbar==0.1.9",
  "typer==0.12.5",
  "uvicorn==0.29.0",
  "numpy>=2.5.0",
  "qrcode>=8.2",
  "huggingface-hub>=1.13.0",
  "easyocr>=1.7.2",
  "transformers>=5.12.1",
  "timm>=1.0.27",
  "einops>=0.8.2",
  "num2words>=0.5.14",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "hypothesis==6.112.0",
  "jsonschema==4.23.0",
  "coverage[toml]==7.10.7",
  "httpx==0.27.2",
  "pytest-cov==7.0.0",
]
opencv = ["opencv-python==4.10.0.84"]

[project.scripts]
argus-img = "argus_img.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
argus_img = [
  "config/*.yaml",
  "config/policies/*.yaml",
  "config/prompt_rules/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.4.2",
]
